--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -229,6 +229,7 @@ body {
 .header-area {
     position: sticky;
     top: 0;
+    z-index: 100;
     padding: 8px 8px 0;
 
     .header-tab-area {
@@ -355,10 +356,9 @@ body {
         border-image: linear-gradient(to right, #fb4f60, #fbb7a1) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #fb4f60, #fbb7a1) 1;
     }
-
 }
 
 .contents-view-area.color-temari {
@@ -389,10 +389,9 @@ body {
         border-image: linear-gradient(to right, #23b3e6, #81e5de) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #23b3e6, #81e5de) 1;
     }
-
 }
 
 .contents-view-area.color-kotone {
@@ -423,10 +422,9 @@ body {
         border-image: linear-gradient(to right, #f3d51d, #fbb5d1) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #f3d51d, #fbb5d1) 1;
     }
-
 }
 
 .contents-view-area.color-mao {
@@ -457,10 +455,9 @@ body {
         border-image: linear-gradient(to right, #bf5cc4, #f6aba4) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #bf5cc4, #f6aba4) 1;
     }
-
 }
 
 .contents-view-area.color-lilja {
@@ -491,10 +488,9 @@ body {
         border-image: linear-gradient(to right, #cee0e0, #92cad4) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #cee0e0, #92cad4) 1;
     }
-
 }
 
 .contents-view-area.color-china {
@@ -525,7 +521,7 @@ body {
         border-image: linear-gradient(to right, #fa891e, #fb5e52) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #fa891e, #fb5e52) 1;
     }
 }
@@ -558,10 +554,9 @@ body {
         border-image: linear-gradient(to right, #8fdc57, #c8e01b) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #8fdc57, #c8e01b) 1;
     }
-
 }
 
 .contents-view-area.color-hiro {
@@ -592,10 +587,9 @@ body {
         border-image: linear-gradient(to right, #00bcd3, #507ff9) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #00bcd3, #507ff9) 1;
     }
-
 }
 
 .contents-view-area.color-sena {
@@ -626,10 +620,9 @@ body {
         border-image: linear-gradient(to right, #fbac26, #f1e769) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #fbac26, #f1e769) 1;
     }
-
 }
 
 .contents-view-area.color-misuzu {
@@ -660,10 +653,9 @@ body {
         border-image: linear-gradient(to right, #6ba2f7, #cdadfa) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #6ba2f7, #cdadfa) 1;
     }
-
 }
 
 .contents-view-area.color-ume {
@@ -694,10 +686,9 @@ body {
         border-image: linear-gradient(to right, #f34a29, #ecc64b) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #f34a29, #ecc64b) 1;
     }
-
 }
 
 .contents-view-area.color-rinami {
@@ -728,10 +719,9 @@ body {
         border-image: linear-gradient(to right, #f97dbd, #f0b7f9) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #f97dbd, #f0b7f9) 1;
     }
-
 }
 
 .contents-view-area.color-default {
@@ -758,10 +748,9 @@ body {
         border-image: linear-gradient(to right, #958b7f, #958b7f) 1;
     }
 
-    .card-filter-text {
+    .card-filter-list-header {
         border-image: linear-gradient(to right, #958b7f, #958b7f) 1;
     }
-
 }
 
 .contents-view-area {
@@ -821,9 +810,22 @@ body {
             padding: 8px 0;
         }
 
-        .card-filter-text {
+        .card-filter-list-header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
             border-bottom: 2px solid;
-            padding-top: 8px;
+            padding-top: 16px;
+        }
+
+        .card-filter-check-all {
+            position: relative;
+            top: 16px;
+            z-index: 1;
+            padding: 2px;
+            cursor: pointer;
+            background: #fff;
+            border: 2px solid #333333;
         }
 
         .card-filter-checkbox-area {
