--- a/src/assets/css/header_area.css
+++ b/src/assets/css/header_area.css
@@ -1,15 +1,7 @@
 .header-area.color-saki {
     background: linear-gradient(to right, #fb4f60, #fbb7a1);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -17,15 +9,7 @@
 .header-area.color-temari {
     background: linear-gradient(to right, #23b3e6, #81e5de);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -33,15 +17,7 @@
 .header-area.color-kotone {
     background: linear-gradient(to right, #f3d51d, #fbb5d1);
 
-    .header-tab-name {
-        color: #333333;
-    }
-
-    .header-tab-button {
-        color: #333333;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #333333;
     }
 }
@@ -49,15 +25,7 @@
 .header-area.color-mao {
     background: linear-gradient(to right, #bf5cc4, #f6aba4);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -65,15 +33,7 @@
 .header-area.color-lilja {
     background: linear-gradient(to right, #cee0e0, #92cad4);
 
-    .header-tab-name {
-        color: #333333;
-    }
-
-    .header-tab-button {
-        color: #333333;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #333333;
     }
 }
@@ -81,15 +41,7 @@
 .header-area.color-china {
     background: linear-gradient(to right, #fa891e, #fb5e52);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -97,15 +49,7 @@
 .header-area.color-sumika {
     background: linear-gradient(to right, #8fdc57, #c8e01b);
 
-    .header-tab-name {
-        color: #333333;
-    }
-
-    .header-tab-button {
-        color: #333333;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #333333;
     }
 }
@@ -113,15 +57,7 @@
 .header-area.color-hiro {
     background: linear-gradient(to right, #00bcd3, #507ff9);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -129,15 +65,7 @@
 .header-area.color-sena {
     background: linear-gradient(to right, #fbac26, #f1e769);
 
-    .header-tab-name {
-        color: #333333;
-    }
-
-    .header-tab-button {
-        color: #333333;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #333333;
     }
 }
@@ -145,15 +73,7 @@
 .header-area.color-misuzu {
     background: linear-gradient(to right, #6ba2f7, #cdadfa);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -161,15 +81,7 @@
 .header-area.color-ume {
     background: linear-gradient(to right, #f34a29, #ecc64b);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -177,15 +89,7 @@
 .header-area.color-rinami {
     background: linear-gradient(to right, #f97dbd, #f0b7f9);
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -193,15 +97,7 @@
 .header-area.color-default {
     background: #958b7f;
 
-    .header-tab-name {
-        color: #ffffff;
-    }
-
-    .header-tab-button {
-        color: #ffffff;
-    }
-
-    .header-operation-button {
+    .header-tab-name, .header-tab-button, .header-operation-button {
         color: #ffffff;
     }
 }
@@ -277,8 +173,8 @@
 
         .schedule-tab {
             background: #efefef;
-            border-top: 2px solid #616b6a;
-            border-right: 2px solid #616b6a;
+            border-top: 2px solid #666666;
+            border-right: 2px solid #666666;
             border-left: none;
             border-bottom: none;
             cursor: default;
