--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -385,6 +385,10 @@
 }
 
 .modal-area {
+    .common-button:disabled {
+        cursor: not-allowed;
+    }
+
     .modal-window-area {
         position: fixed;
         top: 0;
